--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 layout: default
 ---
 <section class="hero is-warning is-fullheight">
-  <div class="hero-content">
+  <div class="hero-body">
     <div class="container">
       <div class="columns">
-        <div class="column">
+        <div class="column is-4 is-offset-2">
           {% include intro_card.html %}
         </div>
-        <div class="column">
+        <div class="column is-4">
           {% include blog_roll.html %}
         </div>
       </div>
