--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="hero is-warning is-fullheight">
-  <div class="hero-body animated fadeInDown">
+  <div class="hero-body">
     <div class="container">
       <div class="columns">
         <div class="column is-4 is-offset-2">
@@ -15,3 +15,4 @@ layout: default
     </div>
   </div>
 </section>
+
